syntax = "proto3";

package rag.v1;

// Content service (stub)
service ContentService {
  rpc GetContent(ContentRequest) returns (ContentResponse);
}

message ContentRequest {
  string tenant_id = 1;
  string content_id = 2;
}

message ContentResponse {
  map<string, string> data = 1;
}












