syntax = "proto3";

package rag.v1;

// Query service for RAG queries
service QueryService {
  rpc SubmitQuery(QueryRequest) returns (QueryResponse);
  rpc GetQueryHistory(QueryHistoryRequest) returns (QueryHistoryResponse);
}

message QueryRequest {
  string tenant_id = 1;
  string user_id = 2;
  string query_text = 3;
  string session_id = 4;
  map<string, string> metadata = 5;
}

message QueryResponse {
  string query_id = 1;
  string answer = 2;
  repeated Source sources = 3;
  float confidence_score = 4;
  int32 processing_time_ms = 5;
  string model_version = 6;
}

message Source {
  string source_id = 1;
  string source_type = 2;
  string title = 3;
  string content_snippet = 4;
  string source_url = 5;
  float relevance_score = 6;
}

message QueryHistoryRequest {
  string tenant_id = 1;
  string user_id = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message QueryHistoryResponse {
  repeated QueryResponse queries = 1;
  int32 total = 2;
}












